@@ -1,5 +1,5 @@
 /*
- * Copyright @ 2015 Atlassian Pty Ltd
+ * Copyright @ 2015 - Present, 8x8 Inc
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,12 +19,10 @@ import java.lang.reflect.*;
 import java.net.*;
 import java.util.*;
 
-import net.java.sip.communicator.impl.protocol.jabber.extensions.*;
-import net.java.sip.communicator.impl.protocol.jabber.extensions.colibri.*;
-import net.java.sip.communicator.impl.protocol.jabber.extensions.jingle.*;
-
-import org.jitsi.service.neomedia.*;
-import org.jitsi.util.*;
+import org.jitsi.utils.*;
+import org.jitsi.xmpp.extensions.*;
+import org.jitsi.xmpp.extensions.colibri.*;
+import org.jitsi.xmpp.extensions.jingle.*;
 import org.json.simple.*;
 
 /**
@@ -33,7 +31,8 @@ import org.json.simple.*;
  *
  * @author Lyubomir Marinov
  */
-final class JSONDeserializer
+@SuppressWarnings("unchecked")
+public final class JSONDeserializer
 {
     /**
      * Deserializes the values of a <tt>JSONObject</tt> which are neither
@@ -92,9 +91,9 @@ final class JSONDeserializer
         {
             try
             {
-                candidateIQ = candidateIQClass.newInstance();
+                candidateIQ = candidateIQClass.getConstructor().newInstance();
             }
-            catch (IllegalAccessException | InstantiationException iae)
+            catch (IllegalAccessException | InstantiationException | NoSuchMethodException | InvocationTargetException iae)
             {
                 throw new UndeclaredThrowableException(iae);
             }
@@ -159,8 +158,7 @@ final class JSONDeserializer
             // direction
             if (direction != null)
             {
-                channelIQ.setDirection(
-                        MediaDirection.parseString(direction.toString()));
+                channelIQ.setDirection(direction.toString());
             }
             // lastN
             if (lastN != null)
@@ -424,8 +422,6 @@ final class JSONDeserializer
                 = conference.get(JSONSerializer.CHANNEL_BUNDLES);
             Object endpoints
                 = conference.get(JSONSerializer.ENDPOINTS);
-            Object recording
-                = conference.get(ColibriConferenceIQ.Recording.ELEMENT_NAME);
             Object strategy
                 = conference.get(ColibriConferenceIQ
                         .RTCPTerminationStrategy.ELEMENT_NAME);
@@ -457,11 +453,6 @@ final class JSONDeserializer
                 deserializeEndpoints(
                         (JSONArray) endpoints,
                         conferenceIQ);
-            }
-            // recording
-            if (recording != null)
-            {
-                deserializeRecording((JSONObject) recording, conferenceIQ);
             }
             if (strategy != null)
             {
@@ -757,36 +748,6 @@ final class JSONDeserializer
         }
     }
 
-    public static void deserializeRecording(JSONObject recording,
-                                            ColibriConferenceIQ conferenceIQ)
-    {
-        Object state
-            = recording.get(ColibriConferenceIQ.Recording.STATE_ATTR_NAME);
-        if (state == null)
-        {
-            return;
-        }
-
-        ColibriConferenceIQ.Recording recordingIQ
-                = new ColibriConferenceIQ.Recording(state.toString());
-
-        Object token
-            = recording.get(ColibriConferenceIQ.Recording.TOKEN_ATTR_NAME);
-        if (token != null)
-        {
-            recordingIQ.setToken(token.toString());
-        }
-
-        Object directory
-                = recording.get(ColibriConferenceIQ.Recording.DIRECTORY_ATTR_NAME);
-        if (directory != null)
-        {
-            recordingIQ.setDirectory(directory.toString());
-        }
-
-        conferenceIQ.setRecording(recordingIQ);
-    }
-
     public static ColibriConferenceIQ.SctpConnection deserializeSctpConnection(
             JSONObject sctpConnection,
             ColibriConferenceIQ.Content contentIQ)
@@ -1052,10 +1013,6 @@ final class JSONDeserializer
             if (IceUdpTransportPacketExtension.NAMESPACE.equals(xmlns))
             {
                 transportIQ = new IceUdpTransportPacketExtension();
-            }
-            else if (RawUdpTransportPacketExtension.NAMESPACE.equals(xmlns))
-            {
-                transportIQ = new RawUdpTransportPacketExtension();
             }
             else
             {
